k8s/event-bus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: event-bus
  template:
    metadata:
      labels:
        component: event-bus
    spec:
      containers:
        - name: event-bus
          image: kwangdock/k8s-docker-simple-blog-event-bus
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
