k8s/moderation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: moderation
  template:
    metadata:
      labels:
        component: moderation
    spec:
      containers:
        - name: moderation
          image: kwangdock/k8s-docker-simple-blog-moderation
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
