k8s/posts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: posts
  template:
    metadata:
      labels:
        component: posts
    spec:
      containers:
        - name: posts
          image: kwangdock/k8s-docker-simple-blog-posts
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
