k8s/comments-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: comments-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    component: comments
