k8s/event-bus-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: event-bus-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    component: event-bus
