k8s/moderation-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: moderation-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    component: moderation
