k8s/posts-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: posts-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    component: posts
