k8s/querys-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: querys-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    component: querys
