k8s/web-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: web-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: web
