k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
          - path: /api/(post)(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 5000
          - path: /api/(comment)(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:
                  number: 5000
          - path: /api/query/(.*)
            pathType: Prefix
            backend:
              service:
                name: querys-service
                port:
                  number: 5000
